--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace gitlab.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://gitlab.com/RaitaroH/YouTube-DeepDark
-@version 2.8.8
+@version 2.8.9
 @updateURL https://gitlab.com/RaitaroH/YouTube-DeepDark/raw/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -343,12 +343,12 @@
 	}
 
 	/*Scrollbar fix for chrome*/
-	body::-webkit-scrollbar-thumb
+	html:not([hide-scrollbar]) body::-webkit-scrollbar-thumb
 	{
 		height: 56px;
 		background: hsla(0, 0%, 53.3%, .4);
 	}
-	body::-webkit-scrollbar
+	html:not([hide-scrollbar]) body::-webkit-scrollbar
 	{
 		width: 8px;
 	}
@@ -378,9 +378,9 @@
 	}
 
 	/*Outline for links*/
- 	a
+	a
  	{
-     		outline-color: var(--main-color) !important;
+			outline-color: var(--main-color) !important;
 	}
 	a:hover
 	{
@@ -390,7 +390,7 @@
 	/*Outline for comments*/
 	#content-text.ytd-comment-renderer
 	{
-    		outline: none !important;
+			outline: none !important;
 	}
 
 	/*Nav bar*/
@@ -429,13 +429,13 @@
 	}
 	#sections.ytd-multi-page-menu-renderer > .ytd-multi-page-menu-renderer:not(:last-child)
 	{
-    	border-color: var(--hover-background) !important;
+		border-color: var(--hover-background) !important;
 	}
 
 	/*Chat in the header*/
 	ytd-conversation-switcher-item-renderer
 	{
-    	border-color: var(--hover-background) !important;
+		border-color: var(--hover-background) !important;
 	}
 	#last-post.ytd-conversation-switcher-item-renderer
 	{
@@ -458,7 +458,7 @@
 	}
 	#title-bar.ytd-conversation-section-renderer
 	{
-    	border-color: var(--hover-background) !important;
+		border-color: var(--hover-background) !important;
 	}
 	ytd-conversation-text-item-renderer[justification-style="JUSTIFICATION_START"] #post-text.ytd-conversation-text-item-renderer,
 	ytd-conversation-link-item-renderer[justification-style="JUSTIFICATION_START"] #link.ytd-conversation-link-item-renderer,
@@ -767,6 +767,15 @@
 	a.yt-simple-endpoint.ytd-toggle-button-renderer, ytd-button-renderer yt-formatted-string.ytd-button-renderer
 	{
 		color: var(--dimmer-text) !important;
+	}
+	ytd-toggle-button-renderer.style-default-active a.yt-simple-endpoint.ytd-toggle-button-renderer /*active like/dislike buttons count*/
+	{
+		color: var(--main-color) !important;
+	}
+	ytd-toggle-button-renderer yt-icon-button.style-default-active button yt-icon svg, /*active like/dislike buttons icons, active bell icon*/
+	ytd-toggle-button-renderer yt-icon-button[aria-pressed='true'] button yt-icon svg /*active like/dislike buttons icons, active bell icon*/
+	{
+		fill: var(--main-color) !important;
 	}
 	ytd-toggle-button-renderer.style-text[is-icon-button]:hover *, /*like/dislike*/
 	ytd-button-renderer[is-icon-button]:hover *, /*share*/
@@ -1286,7 +1295,7 @@
 	/*Watch later svg*/
 	.style-scope.ytd-thumbnail-overlay-toggle-button-renderer:hover
 	{
-    		fill: var(--main-color) !important;
+			fill: var(--main-color) !important;
 	}
 	ytd-thumbnail-overlay-toggle-button-renderer:focus yt-icon.ytd-thumbnail-overlay-toggle-button-renderer
 	{
@@ -1391,6 +1400,11 @@
 	{
 		color: var(--main-color) !important;
 	}
+	ytd-playlist-video-renderer:hover,
+	ytd-playlist-video-renderer:hover:not(.dragging)
+	{
+		background-color: var(--second-background) !important;
+	}
 
 	.header.ytd-playlist-panel-renderer,.playlist-items.ytd-playlist-panel-renderer
 	{
@@ -1454,6 +1468,19 @@
 	.sbsb_c.gsfs:hover,.sbsb_d
 	{
 		background-color: var(--hover-background) !important;
+	}
+	.sbfl_b
+	{
+		background-color: var(--second-background) !important;
+	}
+	.sbfl_b:hover
+	{
+		background-color: var(--hover-background) !important;
+		color: var(--main-color) !important;
+	}
+	.sbpqs_a
+	{
+		color: var(--main-color) !important;
 	}
 	/*Keyboard select text color and hover text color*/
 	.sbsb_c:hover .sbqs_c,.sbsb_c.gsfs.sbsb_d .sbqs_c
@@ -1533,7 +1560,7 @@
 	{
 		color: var(--dimmer-text) !important;
 	}
-	ytd-search-filter-renderer yt-formatted-string.ytd-search-filter-renderer:hover
+	ytd-search-filter-renderer.selected yt-formatted-string.ytd-search-filter-renderer, ytd-search-filter-renderer.selected #dismiss-x.ytd-search-filter-renderer, ytd-search-filter-renderer yt-formatted-string.ytd-search-filter-renderer:hover
 	{
 		color: var(--main-color) !important;
 	}
@@ -1565,7 +1592,7 @@
 	a.yt-simple-endpoint.ytd-toggle-button-renderer:hover *
 	{
 		color: var(--main-color) !important;
-		fill: var(--main-color) !important;
+		/* fill: var(--main-color) !important; */
 	}
 	#filter-group-name.ytd-search-filter-group-renderer
 	{
@@ -1575,7 +1602,7 @@
 
 	iron-icon:hover
 	{
-    	fill: var(--main-color) !important;
+		fill: var(--main-color) !important;
 	}
 	#description-text.ytd-video-renderer
 	{
@@ -1646,7 +1673,8 @@
 	}
 
 	/*Comments*/
-	yt-formatted-string.ytd-comments-header-renderer
+	yt-formatted-string.ytd-comments-header-renderer,
+	#contenteditable-textarea.ytd-commentbox
 	{
 		color: var(--dimmer-text) !important;
 	}
@@ -1743,6 +1771,11 @@
 	{
 		color: var(--main-color) !important;
 	}
+	/*View more comments*/
+	paper-button.yt-next-continuation
+	{
+		color: var(--dimmer-text) !important;
+	}
 	/*Links in description and published date for comments*/
 	#content.ytd-expander a
 	{
@@ -1769,6 +1802,10 @@
 	#hearted-border.ytd-creator-heart-renderer,#hearted.ytd-creator-heart-renderer
 	{
 		color: var(--main-color) !important;
+		fill: var(--main-color) !important;
+	}
+	yt-icon-button#creator-heart-button svg {
+		fill: var(--main-color) !important;
 	}
 
 	/*Pinned by*/
@@ -2040,7 +2077,7 @@
 	/*Live background color*/
 	ytd-thumbnail-overlay-time-status-renderer[overlay-style="LIVE"]
 	{
-    	background-color: var(--main-color) !important;
+		background-color: var(--main-color) !important;
 	}
 
 
@@ -2147,7 +2184,7 @@
 
 	#selectionBar.paper-tabs
 	{
-    	border-color: var(--main-color) !important;
+		border-color: var(--main-color) !important;
 	}
 
 	/*"Best" of YouTube icons in sidepane*/
@@ -2190,16 +2227,23 @@
 		color: inherit;
 	}
 	/*like/dislike buttons in nested replies*/
-	.style-scope.ytd-toggle-button-renderer svg
+	/*.style-scope.ytd-toggle-button-renderer svg
 	{
 		fill: var(--dimmer-text) !important;
 	}
 	.style-scope.ytd-toggle-button-renderer yt-icon-button.style-default-active svg
 	{
 		fill: var(--main-color) !important;
+	}*/
+	ytd-toggle-button-renderer.ytd-comment-action-buttons-renderer #button.ytd-toggle-button-renderer {
+		color: var(--yt-button-color);
 	}
+	ytd-toggle-button-renderer.ytd-comment-action-buttons-renderer .style-default-active {
+		color: var(--main-color) !important;
+	}
+
 	/* Fix for placeholders/skeletons */
-	ytd-masthead.shell
+	/*ytd-masthead.shell
 	{
 		background-color: var(--main-background);
 	}
@@ -2208,6 +2252,28 @@
 	{
 		background-color: var(--hover-background) !important;
 		border-color: var(--hover-background) !important;
+	}*/
+
+	ytd-masthead.shell [class*='skeleton'],
+	.shelf-videos,
+	.skeleton-bg-color {
+	    background-color: var(--hover-background) !important;
+	    border-color: var(--hover-background) !important;
+	}
+	.skeleton-light-border-bottom
+	{
+	    border-bottom: 1px solid var(--hover-background) !important;
+	}
+	html[dark] ytd-masthead.shell,
+	html[dark] .shelf-videos,
+	html[dark] .skeleton-bg-color
+	{
+	    background-color: var(--hover-background) !important;
+	    border-color: var(--hover-background) !important;
+	}
+	html[dark] .skeleton-light-border-bottom
+	{
+	    border-bottom: 1px solid var(--hover-background) !important;
 	}
 
 	#alert-message.ytd-consent-bump-renderer
@@ -2279,6 +2345,14 @@
 	{
 		border-color: var(--hover-background) !important;
 	}
+	ytd-two-column-browse-results-renderer #secondary.ytd-two-column-browse-results-renderer
+	{
+		background-color: var(--second-background) !important;
+	}
+	ytd-two-column-browse-results-renderer #primary ytd-text-header-renderer
+	{
+		color: var(--main-text) !important;
+	}
 	/*dialog confirm*/
 	yt-confirm-dialog-renderer[dialog][dialog][dialog]
 	{
@@ -2341,5 +2415,51 @@
 	#dismiss-button[is-icon-button].ytd-banner-promo-renderer
 	{
 		background: transparent !important;
+	}
+
+	ytd-grid-video-renderer[is-dismissed] #dismissed
+	{
+		border-color: var(--hover-background) !important;
+	}
+	ytd-grid-video-renderer[is-dismissed] #dismissed .ytd-notification-multi-action-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+	ytd-dismissal-follow-up-renderer[dialog][dialog][dialog]
+	{
+		background: var(--main-background) !important;
+	}
+	#content.ytd-dismissal-follow-up-renderer #checkboxLabel.paper-checkbox,
+	#content.ytd-dismissal-follow-up-renderer #label.ytd-dismissal-reason-video-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+	#buttons.ytd-dismissal-follow-up-renderer
+	{
+		border-top-color: var(--hover-background) !important;
+	}
+
+	/*Creator studio*/
+	.creator-editor-nav-tabs li > span, .creator-editor-nav-tabs li a,
+	.metadata-editor-container .tabs .tab-header > span, .metadata-editor-container .tabs .tab-header a,
+	.metadata-editor-container .video-settings-tag-chips-container span {
+		color: var(--main-text) !important;
+	}
+
+	/*Enhancer for YouTube*/
+	#enhancer-for-youtube-unpin-player {
+		color: var(--main-text) !important;
+	}
+	#enhancer-for-youtube-progress {
+		-webkit-appearance: none !important;
+	}
+	#enhancer-for-youtube-progress::-webkit-progress-value {
+		background-color: var(--main-color) !important;
+	}
+	#enhancer-for-youtube-progress::-moz-progress-bar {
+		background-color: var(--main-color) !important;
+	}
+	#enhancer-for-youtube-progress::-ms-fill {
+		background-color: var(--main-color) !important;
 	}
 }
